--- a/aula-css/exercicios/photo-grid/aula-1/style.css
+++ b/aula-css/exercicios/photo-grid/aula-1/style.css
@@ -1,30 +1,40 @@
 @media (min-width: 768px) {
 
+.barra-superior{
+  background-color: rgb(14, 13, 13);
+  margin: auto;
+  width: 960px;
+  height: 50px;
+}
+
 header {
+  background-color: #abc7b1;
   margin: auto;
   width: 960px;
   height: 250px;
 }
 
 body {
-  background-color: #f4f4f4;
+  background-color: #abc7b1;
   margin: auto;
   width: 960px;
 }
 h1 {
-  font-family: Roboto Slab;
+  font-family: 'Pacifico';
   font-size: 32px;
   text-align: left;
+  color: white;
+  margin-left: 10px;
 }
 h2 {
-  font-family: Roboto Slab;
+  font-family: 'Georgia', sans-serif;
   font-size: 14px;
   text-align: center;
 }
 
 h3 {
-  font-family: Roboto Slab;
-  font-size: 12px;
+  font-family: 'Georgia', sans-serif;
+  font-size: 10px;
   text-align: center;
   margin-top: 30px;
 }
@@ -33,43 +43,72 @@ h3 {
   display: table;
 }
 
-.texto {
-  font-family: Roboto Slab;
-  font-size: 14px;
-  text-align: left;
-  color: black;
-}
-
 .imagem {
-  width: 50px;
-  height: 50px;
+  width: 100px
+  height: 100px;
+  padding: 10px;
+  background-color: white;
   display: table-cell;
-  border-radius: 50%;
 }
 
 .texto {
     display: table-cell;
     float: left;
-    margin-top: -200px;
+    margin-top: -150px;
     margin-left: 200px;
+    margin-right: 400px;
+}
+.texto p {
+    display: table-cell;
+    margin-top: -150px;
+    margin-left: 200px;
+    margin-right: 400px;
     font-size: 14px;
+    font-family: 'Georgia', sans-serif;
+    text-align: left;
+    color: black;
 }
 
-div.box1 {
-    
+.conteiner1 {
     display: flex; 
     justify-content: center;
+    padding: 10px;
+    background-color: #abc7b1;
+    width: 960px;
+    height: 380px;
 }
-
-div.box2 {
-    
-    display: flex; 
-    justify-content: center; 
-}
-
-div.box3 {
+.conteiner2 {
     display: flex; 
     justify-content: center;
+    padding: 10px;
+    background-color:#abc7b1;
+    width: 960px;
+    height: 380px;
+    align-items: center;
+}
+.conteiner3 {
+    display: flex; 
+    justify-content: center;
+    padding: 10px;
+    background-color: #abc7b1;
+    width: 960px;
+    height: 400px;
+}
+.card {
+    max-width: 100%;
+    max-height: 100%;  
+    padding: 10px;
+    background-color: white;
+    justify-content: center;
+    object-fit: cover;
+}
+
+.card p {
+  font-size: 16px;
+}
+
+.card img {
+  width: 100%;
 }
 
 p { 
