--- a/aula-css/exercicios/photo-grid/aula-1/style.css
+++ b/aula-css/exercicios/photo-grid/aula-1/style.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
 
 .barra-superior{
   background-color: rgb(14, 13, 13);
@@ -44,8 +44,8 @@ h3 {
 }
 
 .imagem {
-  width: 100px
-  height: 100px;
+  width: 50px
+  height: 50px;
   padding: 10px;
   background-color: white;
   display: table-cell;
@@ -58,13 +58,14 @@ h3 {
     margin-left: 200px;
     margin-right: 400px;
 }
+
 .texto p {
     display: table-cell;
     margin-top: -150px;
     margin-left: 200px;
-    margin-right: 400px;
-    font-size: 14px;
-    font-family: 'Georgia', sans-serif;
+    margin-right: 300px;
+    font-size: 18px;
+    font-family: 'Barlow Condensed', sans-serif;
     text-align: left;
     color: black;
 }
@@ -72,7 +73,6 @@ h3 {
 .conteiner1 {
     display: flex; 
     justify-content: center;
-    padding: 10px;
     background-color: #abc7b1;
     width: 960px;
     height: 380px;
@@ -80,21 +80,43 @@ h3 {
 .conteiner2 {
     display: flex; 
     justify-content: center;
-    padding: 10px;
     background-color:#abc7b1;
     width: 960px;
     height: 380px;
-    align-items: center;
 }
+
 .conteiner3 {
     display: flex; 
     justify-content: center;
-    padding: 10px;
     background-color: #abc7b1;
     width: 960px;
-    height: 400px;
+    height: 380px;
 }
+.conteiner4 {
+    display: flex; 
+}
+.card2 {
+    width: 100%;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    background-color: white;
+    align-items: center;
+}
+.card2 img {
+width: 400px;
+}
+
+.card2 span {
+    display: flex;
+    font-size: 20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    text-align: center;
+    margin: 10px;
+} 
+
 .card {
+    display: flexbox;
     max-width: 100%;
     max-height: 100%;  
     padding: 10px;
@@ -108,13 +130,14 @@ h3 {
 }
 
 .card img {
-  width: 100%;
+   width: 100%;
 }
 
 p { 
     text-align: center;
     font-size: 14px;
 }
+
 footer {
     margin: auto;
     width: 960px;
