--- a/aula-css/exercicios/photo-grid/aula-1/print.css
+++ b/aula-css/exercicios/photo-grid/aula-1/print.css
@@ -1,5 +1,3 @@
-@media print {
-
   .barra-superior {
     background-color: rgb(14, 13, 13);
     margin: auto;
@@ -96,21 +94,16 @@
     height: 380px;
   }
   
-  .card2 {
-    display: block;
-    width: 960px;
-    height: 600px;
-  }
-  
   .card2 img {
-    width: 100%;
+    width: 800px;
     display: block;
     margin: 0 auto;
+    justify-content: center;
 
   }
 
   .card2 span {
-    font-size: 20px;
+    font-size: 32px;
     font-family: 'Barlow Condensed', sans-serif;
     text-align: center;
   } 
@@ -143,4 +136,3 @@
     width: 960px;
     height: 50px;
   }
-}
